site/src/style/home.less
/* ... */
.tdesign-homepage {
  overflow: hidden;
  width: 100%;
  position: relative;
  background: var(--bg-color-page);

  --outer-padding-left-right: 48px;
  --inner-padding-left-right: 32px;
  --bg-component-board: #f1f2f5;
  --bg-component-board-linear: linear-gradient(270deg, #f1f2f5 0%, rgba(241, 242, 245, 0) 100%);
  --box-shadow-detail: 0px 50px 100px -12px rgba(0, 0, 0, 0.05), 0px 30px 60px -30px rgba(0, 0, 0, 0.1);
  --bg-color-banner-linear: linear-gradient(180deg, rgba(245, 245, 245, 0) 0%, #f5f5f5 100%);

  td-header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 1000;
  }

  .main-page {
    position: relative;
    z-index: 10;
    color: var(--text-primary);
    padding: 0 var(--outer-padding-left-right);
    margin: 464px auto 120px;

    .banner-booking {
      text-align: center;
      cursor: pointer;
      img {
        height: 108px;

        @media screen and (max-width: 960px) {
          height: 92px;
        }
      }

      &__info {
        border-radius: 25px;
        background-color: var(--bg-color-card);
        padding: 7px 15px;
        border: 1px solid var(--component-border);
      }
    }

    .banner-info {
      position: relative;
      max-width: 1440px;
      margin: 0 auto 28px;
      box-sizing: border-box;
      display: flex;
      justify-content: space-between;
      color: var(--text-primary);

      &__left {
        font-family: 'tencentW7';
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        position: relative;
        transition: all 0.2s linear;

        .name {
          font-size: 64px;
          line-height: 64px;
          letter-spacing: -2px;
          white-space: nowrap;

          .primary {
            color: var(--brand-main);
          }
          .sub-title {
            font-size: 24px;
            line-height: 64px;

            @media screen and (max-width: 480px) {
              width: 200px;
              text-wrap: wrap;
            }
          }
        }

        .start {
          font-size: 28px;
          font-weight: bold;
          margin-top: 24px;
          text-decoration: none;
          color: var(--text-primary);
          transition: all 0.2s linear;

          &:hover {
            color: var(--brand-main);
          }
        }
      }
    }
  }
}

.module-news {
  max-width: 1440px;
  overflow-x: scroll;
  margin-bottom: 48px;
  display: flex;
  margin: 0 auto 48px auto;
  > div {
    flex: 0 0 348px;
    display: inline-block;
    &:not(:last-child) {
      margin-right: 16px;
    }
  }

  .t-card {
    background-color: var(--bg-color-card);
    height: 148px;
    border-color: transparent;
    padding: 20px 24px;
    box-sizing: border-box;
  }
  .t-card__description {
    margin: 8px 0;
    height: 44px;
    color: var(--text-primary);
  }
  .t-card__header,
  .t-card__footer {
    padding: 0;
  }

  .t-card__footer {
    text-align: right;
    color: var(--text-placeholder);
  }
}
/* ... */

